# ProgrammingLanguagesLabs

./: Dockerfile  docker-compose.yaml  pom.xml
assignment-1-io-library-master/: lib.inc
assignment-2-dictionary-master/: colon.inc  dict.asm  lib.asm  main.asm  makefile  test.py  words.inc
assignment-3-image-rotation-master/solution/: CMakeLists.txt
assignment-3-image-rotation-master/solution/include/: bmp.h  image.h  rotate.h
assignment-3-image-rotation-master/solution/src/: bmp.c  main.c  rotate.c
assignment-3-image-rotation-master/tester/include/: image.h
assignment-4-memory-allocator-master/src/: main.c  mem.c
hw4/: pom.xml
hw4/src/main/java/ru/nikita/t1/: AuthController.java  AuthenticationService.java  Homework4Application.java  InvalidTokenException.java  JwtBlacklistService.java  SecurityConfig.java  User.java  UserRepository.java
hw4/src/main/java/ru/nikita/t1/dto/: AccessToken.java  LoginRequest.java  MessageResponse.java  RefreshTokenRequest.java  RegistrationRequest.java  RevokeTokenRequest.java
hw4/src/main/resources/: application.properties
hw4/src/test/java/ru/nikita/t1/: Homework4ApplicationTests.java
src/main/: homework2.uiml
src/main/java/com/homework/homework1/: Homework1Application.java  Main.java  WeatherClient.java
src/main/java/com/homework/homework1/config/: KafkaConfig.java
src/main/java/com/homework/homework1/controller/: WeatherController.java
src/main/java/com/homework/homework1/service/: WeatherProducer.java
src/main/java/com/homework/homework1/service/dto/: WeatherReport.java
